k8s/caddy-implementation/caddy-install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy
        image: caddy:latest
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 2019
        args:
          - caddy
          - run
          - --config
          - /etc/caddy/Caddyfile
        volumeMounts:
        - name: caddy-config
          mountPath: /etc/caddy
      - name: manager
        image: ghcr.io/caddyserver/gateway:latest
        command:
        - /ko-app/gateway
        args:
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=127.0.0.1:8080
        - --leader-elect
      volumes:
      - name: caddy-config
        configMap:
          name: caddy-config
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  selector:
    app: caddy
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  type: LoadBalancer
